cmake_minimum_required(VERSION 3.8.0)
project("libClaPP" VERSION 0.4.0)
include(CTest)
include(GNUInstallDirs)
include(cmake/git.cmake)
include(cmake/compiler_flags.cmake)

if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
    message(STATUS "Setting build to ${CMAKE_BUILD_TYPE}, because nothing was given.")
endif()
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(PkgConfig REQUIRED)
string(TIMESTAMP libClaPP_CONFIG_TIME "%Y-%m-%d %H:%M:%S")
set (THIRD_PARTY_DIR "${PROJECT_SOURCE_DIR}/third_party")

option(libClaPP_CLANG_TIDY "Clang-Tidy." Off)
option(libClaPP_CPPCHECK "CPPCheck." Off)
option(libClaPP_BUILD_TESTS "Build tests." Off)
option(libClaPP_BUILD_EXAMPLES "Build examples." Off)
option(libClaPP_BUILD_DOC_CODE "Build doc code." Off)
option(libClaPP_BUILD_COVERAGE "Cretae gcov build." Off)
option(libClaPP_SUBMODULE_DEPENDENCIES "Use dependencies from git submodules." Off)
option(libClaPP_ENABLE_IPO "Enable Iterprocedural Optimization, aka Link Time Optimization (LTO)" Off)
option(libClaPP_PEDANTIC_COMPILER_FLAGS "Enable pedantic compiler flags." Off)

if(libClaPP_ENABLE_IPO)
  include(CheckIPOSupported)
  check_ipo_supported(RESULT result OUTPUT output)
  if(result)
    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
  else()
    message(SEND_ERROR "IPO is not supported: ${output}")
  endif()
endif()

if(libClaPP_CLANG_TIDY)
    include(cmake/clang_tidy.cmake)
endif()

if(libClaPP_CPPCHECK)
  if(CMAKE_VERSION VERSION_GREATER 3.10)
    find_program(CPPCHECK cppcheck)
    if(CPPCHECK)
        set(CMAKE_CXX_CPPCHECK ${CPPCHECK} --enable=all --suppress=*:${CMAKE_CURRENT_SOURCE_DIR}/src/include/clapp/filesystem.h:27 --suppress=*:${THIRD_PARTY_DIR}/* --inconclusive -v -i${THIRD_PARTY_DIR})
    else()
      message(SEND_ERROR "CPPCheck requested but executable not found.")
    endif()
  else()
    message(SEND_ERROR "CPPCheck requested but current CMAKE is not compatible.")
  endif()
endif()

include(cmake/sanitizer.cmake)

add_library(libClaPP_GSL INTERFACE)
if(libClaPP_SUBMODULE_DEPENDENCIES)
    if(NOT TARGET GSL)
        set(GSL_CXX_STANDARD "17" CACHE STRING "Use c++ standard")
        add_subdirectory("${THIRD_PARTY_DIR}/GSL" EXCLUDE_FROM_ALL)
    endif()
    target_link_libraries(libClaPP_GSL INTERFACE GSL)
    if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
        target_compile_options(libClaPP_GSL INTERFACE -Wno-weak-vtables)
    endif()
    if(libClaPP_BUILD_TESTS)
        if(NOT TARGET gmock_main)
            add_subdirectory("${THIRD_PARTY_DIR}/googletest" EXCLUDE_FROM_ALL)
            target_compile_features(gtest PUBLIC cxx_std_17)    #changing gtest (and its further libs gmock and gmock_main) to be C++17, otherwise we will get linker error.
            add_library(libClaPP_gmock_main INTERFACE)
            target_link_libraries(libClaPP_gmock_main INTERFACE gmock_main)
            if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
                target_compile_options(libClaPP_gmock_main INTERFACE -Wno-used-but-marked-unused -Wno-covered-switch-default -Wno-exit-time-destructors)
            endif()
        endif()
    endif()
else()
    if(TARGET GSL)
        target_link_libraries(libClaPP_GSL INTERFACE GSL)
    else()
        find_path(libClaPP_GSL_INCLUDE_DIR NAMES gsl_assert PATH_SUFFIXES gsl)
        if(NOT libClaPP_GSL_INCLUDE_DIR)
            message(FATAL_ERROR "Could not find GSL library.")
        endif()
        target_include_directories(libClaPP_GSL INTERFACE ${libClaPP_GSL_INCLUDE_DIR}/..)
    endif()
    if(libClaPP_BUILD_TESTS)
        pkg_check_modules(GMOCK REQUIRED gmock_main>=1.10.0)
        add_library(libClaPP_gmock_main INTERFACE)
        target_include_directories(libClaPP_gmock_main SYSTEM INTERFACE ${GMOCK_INCLUDE_DIRS})
        target_link_libraries(libClaPP_gmock_main INTERFACE ${GMOCK_LIBRARIES})
    endif()
endif()

enable_testing()
add_subdirectory(src)

if(libClaPP_BUILD_EXAMPLES)
    add_subdirectory(examples)
endif()

if(libClaPP_BUILD_DOC_CODE)
    add_subdirectory(doc)
endif()

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/libclapp.pc.in ${CMAKE_CURRENT_BINARY_DIR}/libclapp.pc @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libclapp.pc DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")

if(libClaPP_BUILD_TESTS)
    add_subdirectory(tests)
endif()
