if(libClaPP_FS_LINKER_FLAG)
    add_executable(libclapp_example_full full_example.cpp)
    target_link_libraries(libclapp_example_full clapp ${libClaPP_FS_LINKER_FLAG})
    target_compile_options(libclapp_example_full PRIVATE ${libClaPP_COMPILE_OPTIONS})
    if(CLANG_TIDY)
      set_target_properties(libclapp_example_full PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_ARGS}")
    endif()
    install(TARGETS libclapp_example_full DESTINATION ${CMAKE_INSTALL_BINDIR})
endif()

add_executable(libclapp_example_short short_example.cpp)
target_link_libraries(libclapp_example_short clapp)
target_compile_options(libclapp_example_short PRIVATE ${libClaPP_COMPILE_OPTIONS})
if(CLANG_TIDY)
  set_target_properties(libclapp_example_short PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_ARGS}")
endif()
install(TARGETS libclapp_example_short DESTINATION ${CMAKE_INSTALL_BINDIR})

add_executable(libclapp_example_sub_parser sub_parser_example.cpp)
target_link_libraries(libclapp_example_sub_parser clapp)
target_compile_options(libclapp_example_sub_parser PRIVATE ${libClaPP_COMPILE_OPTIONS})
if(CLANG_TIDY)
  set_target_properties(libclapp_example_sub_parser PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_ARGS}")
endif()
install(TARGETS libclapp_example_sub_parser DESTINATION ${CMAKE_INSTALL_BINDIR})
