if(libClaPP_CXX_FS_LINKER_FLAG)
    add_executable(libclapp_example_large large_example.cpp)
    target_link_libraries(libclapp_example_large clapp ${libClaPP_FS_LINKER_FLAG} libClaPP_CXX_COMPILE_OPTIONS)
    if(libClaPP_CLANG_TIDY_ARGS_EXAMPLES)
        set_target_properties(libclapp_example_large PROPERTIES CXX_CLANG_TIDY "${libClaPP_CLANG_TIDY_ARGS_EXAMPLES}")
    endif()
    install(TARGETS libclapp_example_large DESTINATION ${CMAKE_INSTALL_BINDIR})
    configure_file(test_large_example.sh test_large_example.sh COPYONLY)
    add_test(NAME large_example_tests COMMAND test_large_example.sh WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
endif()

add_executable(libclapp_example_short short_example.cpp)
target_link_libraries(libclapp_example_short clapp libClaPP_CXX_COMPILE_OPTIONS)
if(libClaPP_CLANG_TIDY_ARGS_EXAMPLES)
    set_target_properties(libclapp_example_short PROPERTIES CXX_CLANG_TIDY "${libClaPP_CLANG_TIDY_ARGS_EXAMPLES}")
endif()
install(TARGETS libclapp_example_short DESTINATION ${CMAKE_INSTALL_BINDIR})
configure_file(test_short_example.sh test_short_example.sh COPYONLY)
add_test(NAME short_example_tests COMMAND test_short_example.sh WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})

add_executable(libclapp_example_sub_parser sub_parser_example.cpp)
target_link_libraries(libclapp_example_sub_parser clapp libClaPP_CXX_COMPILE_OPTIONS)
if(libClaPP_CLANG_TIDY_ARGS_EXAMPLES)
    set_target_properties(libclapp_example_sub_parser PROPERTIES CXX_CLANG_TIDY "${libClaPP_CLANG_TIDY_ARGS_EXAMPLES}")
endif()
install(TARGETS libclapp_example_sub_parser DESTINATION ${CMAKE_INSTALL_BINDIR})
configure_file(test_sub_parser_example.sh test_sub_parser_example.sh COPYONLY)
add_test(NAME sub_parser_example_tests COMMAND test_sub_parser_example.sh WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
